# Course_DigitalImageProcessing

./: README.md
LomoFilter/: CMakeLists.txt  lomoFilter.py  main.cpp  temp.cpp  temp2.cpp
SkinFilter/: CMakeLists.txt  main.cpp  skinFilter.py
finalProject/: face_lift.py  img_utils.py
